@@ -1,73 +1,84 @@
-//package apps.progfort.platform.configuration.security;
+// package apps.progfort.platform.configuration.security;
 //
-//import org.springframework.context.annotation.Bean;
-//import org.springframework.context.annotation.Configuration;
-//import org.springframework.http.HttpStatus;
-//import org.springframework.security.config.Customizer;
-//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-//import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-//import org.springframework.security.web.SecurityFilterChain;
-//import org.springframework.security.web.authentication.HttpStatusEntryPoint;
-//import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
-//import org.springframework.security.web.csrf.CsrfTokenRequestHandler;
-//import org.springframework.security.web.csrf.XorCsrfTokenRequestAttributeHandler;
-//import org.springframework.web.cors.CorsConfiguration;
-//import org.springframework.web.cors.CorsConfigurationSource;
-//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+// import org.springframework.context.annotation.Bean;
+// import org.springframework.context.annotation.Configuration;
+// import org.springframework.http.HttpStatus;
+// import org.springframework.security.config.Customizer;
+// import
+// org.springframework.security.config.annotation.web.builders.HttpSecurity;
+// import
+// org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+// import org.springframework.security.web.SecurityFilterChain;
+// import org.springframework.security.web.authentication.HttpStatusEntryPoint;
+// import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
+// import org.springframework.security.web.csrf.CsrfTokenRequestHandler;
+// import
+// org.springframework.security.web.csrf.XorCsrfTokenRequestAttributeHandler;
+// import org.springframework.web.cors.CorsConfiguration;
+// import org.springframework.web.cors.CorsConfigurationSource;
+// import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 //
-//import java.util.Arrays;
-//import java.util.List;
+// import java.util.Arrays;
+// import java.util.List;
 //
-//import static org.springframework.http.HttpHeaders.CONTENT_TYPE;
+// import static org.springframework.http.HttpHeaders.CONTENT_TYPE;
 //
 //@Configuration
 //@EnableWebSecurity
-//public class SecurityConfiguration {
+// public class SecurityConfiguration {
 //
-//    @Bean
-//    protected SecurityFilterChain configure(HttpSecurity http) throws Exception {
-//        CookieCsrfTokenRepository tokenRepository = CookieCsrfTokenRepository.withHttpOnlyFalse();
-//        XorCsrfTokenRequestAttributeHandler delegate = new XorCsrfTokenRequestAttributeHandler();
+//     @Bean
+//     protected SecurityFilterChain configure(HttpSecurity http) throws
+//     Exception {
+//         CookieCsrfTokenRepository tokenRepository =
+//         CookieCsrfTokenRepository.withHttpOnlyFalse();
+//         XorCsrfTokenRequestAttributeHandler delegate = new
+//         XorCsrfTokenRequestAttributeHandler();
 //
-//        delegate.setCsrfRequestAttributeName(null);
-//        CsrfTokenRequestHandler csrfTokenRequestHandler = delegate::handle;
+//         delegate.setCsrfRequestAttributeName(null);
+//         CsrfTokenRequestHandler csrfTokenRequestHandler = delegate::handle;
 //
-//        http
-//                .authorizeHttpRequests((authorize) -> authorize
-//                        .anyRequest().authenticated()
-//                )
-//                .formLogin((login) -> login
-//                        .successHandler(((request, response, authentication) ->
-//                                response.setStatus(HttpStatus.OK.value())))
-//                )
-//                .logout((logout) -> logout
-//                        .logoutSuccessHandler(new CsrfTokenAwareLogoutSuccessHandler(tokenRepository))
-//                )
-//                .cors(Customizer.withDefaults())
-//                .exceptionHandling((exceptions) -> exceptions
-//                        .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
-//                )
-//                .csrf((csrf) -> csrf
-//                        .csrfTokenRepository(tokenRepository)
-//                        .csrfTokenRequestHandler(csrfTokenRequestHandler)
-//                );
+//         http
+//                 .authorizeHttpRequests((authorize) -> authorize
+//                         .anyRequest().authenticated()
+//                 )
+//                 .formLogin((login) -> login
+//                         .successHandler(((request, response, authentication)
+//                         ->
+//                                 response.setStatus(HttpStatus.OK.value())))
+//                 )
+//                 .logout((logout) -> logout
+//                         .logoutSuccessHandler(new
+//                         CsrfTokenAwareLogoutSuccessHandler(tokenRepository))
+//                 )
+//                 .cors(Customizer.withDefaults())
+//                 .exceptionHandling((exceptions) -> exceptions
+//                         .authenticationEntryPoint(new
+//                         HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
+//                 )
+//                 .csrf((csrf) -> csrf
+//                         .csrfTokenRepository(tokenRepository)
+//                         .csrfTokenRequestHandler(csrfTokenRequestHandler)
+//                 );
 //
-//        return http.build();
-//    }
+//         return http.build();
+//     }
 //
-//    @Bean
-//    public CorsConfigurationSource corsConfigurationSource() {
-//        final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        CorsConfiguration corsConfiguration = new CorsConfiguration();
+//     @Bean
+//     public CorsConfigurationSource corsConfigurationSource() {
+//         final UrlBasedCorsConfigurationSource source = new
+//         UrlBasedCorsConfigurationSource(); CorsConfiguration
+//         corsConfiguration = new CorsConfiguration();
 //
-//        corsConfiguration.addAllowedHeader("X-XSRF-TOKEN");
-//        corsConfiguration.addAllowedHeader(CONTENT_TYPE);
-//        corsConfiguration.setAllowCredentials(true);
-//        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        corsConfiguration.setAllowedOrigins(List.of("*"));
+//         corsConfiguration.addAllowedHeader("X-XSRF-TOKEN");
+//         corsConfiguration.addAllowedHeader(CONTENT_TYPE);
+//         corsConfiguration.setAllowCredentials(true);
+//         corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST",
+//         "PUT", "DELETE", "OPTIONS"));
+//         corsConfiguration.setAllowedOrigins(List.of("*"));
 //
-//        source.registerCorsConfiguration("/**", corsConfiguration);
+//         source.registerCorsConfiguration("/**", corsConfiguration);
 //
-//        return source;
-//    }
-//}
+//         return source;
+//     }
+// }
